[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

keycloak = "24.0"
tokio = { version = "1.37.0", features = [ "full" ] }
tokio-macros = "2.2.0"
reqwest = { version = "0.12", features = [ "json" ] }